fix spacing error on styles page, link image into quiz results section, add page link backslash according to color scheme, build out question form submission in scripts - still buggy

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,6 @@ h3 {
   font-family: Piazzolla;
   color: #123C69;
   background-color: #EDC7B7;
-  
 }
 
 p {
@@ -73,4 +72,12 @@ img {
 
 .question-styling {
   background: #EDC7B7;
+}
+
+.link-backsplash {
+  background-color: #BAB2B5;
+}
+
+#quiz-results {
+  display: none;
 }
